--- a/.github/workflows/notify_comments.yml
+++ b/.github/workflows/notify_comments.yml
@@ -22,5 +22,6 @@ jobs:
         env:
           WEBHOOK_URL: ${{ secrets.SLACK_COMMENT_WEBHOOK_URL }}
           BODY: ${{ toJson(github.event.comment.body) }}
+          HTML_URL: ${{github.event.comment.html_url}}
         shell: bash
-        run: echo $BODY | xargs -I {} curl -s POST "$WEBHOOK_URL" -H "Content-Type:application/json" --data '{"issue":"${{github.event.comment.html_url}}", "body":"{}"}'
+        run: echo "$BODY" | xargs -I {} curl -s POST "$WEBHOOK_URL" -H "Content-Type:application/json" --data '{"issue":"'"$HTML_URL"'", "body":"{}"}'
