--- a/build-support/Gemfile
+++ b/build-support/Gemfile
@@ -2,6 +2,7 @@ source "https://rubygems.org"
 
 gem "fastlane"
 gem "addressable", ">= 2.8.0"
+gem "webrick", ">= 2.2.8"
 
 plugins_path = File.join(File.dirname(__FILE__), 'fastlane', 'Pluginfile')
 eval_gemfile(plugins_path) if File.exist?(plugins_path)
